--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
           <a href="catalog.html" class="hidden-menu__link">Каталог</a>
         </li>
         <li class="hidden-menu__item">
-          <a href="#!" class="hidden-menu__link">О нас</a>
+          <a href="about-us.html" class="hidden-menu__link">О нас</a>
         </li>
         <li class="hidden-menu__item">
-          <a href="#!" class="hidden-menu__link">Сотрудничество</a>
-        </li>
-        <li class="hidden-menu__item">
-          <a href="#!" class="hidden-menu__link">Контакты</a>
+          <a href="contacts.html" class="hidden-menu__link">Контакты</a>
         </li>
         <li class="hidden-menu__item">
           <a href="#!" class="hidden-menu__link">Блог</a>
@@ -46,9 +43,9 @@
       </ul>
       <div class="line"></div>
       <div class="hidden-menu__media">
-        <img src="img/instagram-1-svgrepo-com (2).svg" alt="">
-        <img src="img/vk-vk-svgrepo-com.svg" alt="">
-        <img src="img/youtube-svgrepo-com (1).svg" alt="">
+        <img src="img/instagram-1-svgrepo-com (2).svg" alt="" />
+        <img src="img/vk-vk-svgrepo-com.svg" alt="" />
+        <img src="img/youtube-svgrepo-com (1).svg" alt="" />
       </div>
     </div>
     <main class="main">
@@ -72,27 +69,46 @@
       </div>
       <a class="catalog-btn" href="catalog.html">Перейти в каталог</a>
       <section class="content">
-        
-        <img class="content__first-img" src="img/eurofashion_2022_11_02_2433.jpg" alt="">
+        <img
+          class="content__first-img"
+          src="img/eurofashion_2022_11_02_2433.jpg"
+          alt=""
+        />
         <div class="container">
-          <h2 class="container__title">
-            PVEUROFASHION
-          </h2>
-          <p class="content__text">Сдержанная элегантность и романтичность стиля, воплощенная в сочетании последних трендов, качественных тканей, фурнитуры и удивительных цветов, создают уникальный коктейль, который подчеркнет ваше изящество и строгую изысканность.</p>
+          <h2 class="container__title">PVEUROFASHION</h2>
+          <p class="content__text">
+            Сдержанная элегантность и романтичность стиля, воплощенная в
+            сочетании последних трендов, качественных тканей, фурнитуры и
+            удивительных цветов, создают уникальный коктейль, который подчеркнет
+            ваше изящество и строгую изысканность.
+          </p>
         </div>
-        
       </section>
       <section class="advantages">
         <div class="container">
           <div class="advantages__one">
-            <img src="img/boutique-shop-unique-boutique-store-svgrepo-com.svg" alt="" class="advantages__img">
+            <img
+              src="img/boutique-shop-unique-boutique-store-svgrepo-com.svg"
+              alt=""
+              class="advantages__img"
+            />
             <h4 class="advantages__title">250+ магазинов</h4>
-            <p class="advantages__text">Более 250 магазинов России, Беларуси, Азербайджана и Казахстана радуют розничных покупателей самыми модными моделями</p>
+            <p class="advantages__text">
+              Более 250 магазинов России, Беларуси, Азербайджана и Казахстана
+              радуют розничных покупателей самыми модными моделями
+            </p>
           </div>
           <div class="advantages__one">
-            <img src="img/time-svgrepo-com.svg" alt="" class="advantages__img">
+            <img
+              src="img/time-svgrepo-com.svg"
+              alt=""
+              class="advantages__img"
+            />
             <h4 class="advantages__title">Нам более 10 лет</h4>
-            <p class="advantages__text">Продукция нашей компании уже более 10 лет успешно продается на рынке Российской Федерации</p>
+            <p class="advantages__text">
+              Продукция нашей компании уже более 10 лет успешно продается на
+              рынке Российской Федерации
+            </p>
           </div>
         </div>
       </section>
