--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Каталог</title>
+    <title>Контакты</title>
     <link rel="icon" type="image/png" href="img/favicon.png" />
   </head>
   <body>
@@ -34,7 +34,6 @@
         <li class="hidden-menu__item">
           <a href="about-us.html" class="hidden-menu__link">О нас</a>
         </li>
-        
         <li class="hidden-menu__item">
           <a href="contacts.html" class="hidden-menu__link">Контакты</a>
         </li>
@@ -49,54 +48,49 @@
         <img src="img/youtube-svgrepo-com (1).svg" alt="" />
       </div>
     </div>
-    <main class="catalog-main">
+    <main>
       <div class="container">
-        <h2 class="catalog__title" >Каталог 2023</h2>
-        <div class="catalog__list">
-          <div class="catalog__card">
-            <img src="img/2.jpg" alt="" class="catalog__img" />
-            <h4 class="catalog__name">Платье 286</h4>
-            <div class="catalog__size">
-              <a href="#!">48</a>
-              <a href="#!">50</a>
-              <a href="#!">52</a>
-              <a href="#!">54</a>
-              <a href="#!">56</a>
-            </div>
-            <a class="catalog__price" href="#!">Узнать оптовую цену</a>
-          </div>
-          <div class="catalog__card">
-            <img src="img/2.jpg" alt="" class="catalog__img" />
-            <h4 class="catalog__name">Платье 286</h4>
-            <div class="catalog__size">
-              <a href="#!">48</a>
-              <a href="#!">50</a>
-              <a href="#!">52</a>
-              <a href="#!">54</a>
-              <a href="#!">56</a>
-            </div>
-            <a class="catalog__price" href="#!">Узнать оптовую цену</a>
-          </div>
-          <div class="catalog__card">
-            <img src="img/2.jpg" alt="" class="catalog__img" />
-            <h4 class="catalog__name">Платье 286</h4>
-            <div class="catalog__size">
-              <a href="#!">48</a>
-              <a href="#!">50</a>
-              <a href="#!">52</a>
-              <a href="#!">54</a>
-              <a href="#!">56</a>
-            </div>
-            <a class="catalog__price" href="#!">Узнать оптовую цену</a>
+        <h2 class="contacts__title">Свяжитесь с нами</h2>
+        <form action="" class="contacts-form">
+          <input
+            class="contacts__input_name"
+            placeholder="Ваше имя:"
+            type="text"
+          />
+          <input
+            class="contacts__input_phone"
+            placeholder="Ваш телефон:"
+            type="number"
+          />
+          <input
+            class="contacts__input_email"
+            placeholder="Ваш email:"
+            type="email"
+          />
+          <textarea
+            placeholder="Сообщение:"
+            class="contacts__textarea"
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+          ></textarea>
+        </form>
+        <div class="contacts__manager">
+          <p class="contacts__name">Исаева Нармин Алиевна</p>
+          <h3 class="contacts__seller">(Руководитель отдела продаж)</h3>
+          <p class="contacts__phone">+7 999 888 77 77</p>
+          <a target="_blank" href="https://yandex.by/maps/-/CCUCVQVQSA"
+            >Официальный дистрибьютор в Москве
+          </a>
+          <div class="contacts__media-social">
+            <a href="#!"><img src="img/viber-svgrepo-com.svg" alt=""></a>
+            <a href="#!"><img src="img/whatsapp-svgrepo-com .svg" alt=""></a>
+            <a href="#!"><img src="img/telegram-svgrepo-com.svg" alt=""></a>
           </div>
         </div>
       </div>
     </main>
-    <footer class="footer">
-      <div class="container">
-        <p>Pveurofashion © 2023 - Все права защищены</p>
-      </div>
-    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="js/main.js"></script>
