--- a/contacts.html
+++ b/contacts.html
@@ -37,9 +37,7 @@
         <li class="hidden-menu__item">
           <a href="contacts.html" class="hidden-menu__link">Контакты</a>
         </li>
-        <li class="hidden-menu__item">
-          <a href="#!" class="hidden-menu__link">Блог</a>
-        </li>
+        
       </ul>
       <div class="line"></div>
       <div class="hidden-menu__media">
@@ -75,22 +73,28 @@
             cols="30"
             rows="10"
           ></textarea>
+          <button class="contacts__btn">Отправить</button>
         </form>
         <div class="contacts__manager">
           <p class="contacts__name">Исаева Нармин Алиевна</p>
           <h3 class="contacts__seller">(Руководитель отдела продаж)</h3>
           <p class="contacts__phone">+7 999 888 77 77</p>
           <a target="_blank" href="https://yandex.by/maps/-/CCUCVQVQSA"
-            >Официальный дистрибьютор в Москве
+            >Официальный дистрибьютор в Москве 14км МКАД ТК Садовод 19 линия 121 место. 
           </a>
           <div class="contacts__media-social">
-            <a href="#!"><img src="img/viber-svgrepo-com.svg" alt=""></a>
-            <a href="#!"><img src="img/whatsapp-svgrepo-com .svg" alt=""></a>
-            <a href="#!"><img src="img/telegram-svgrepo-com.svg" alt=""></a>
+            <a href="#!"><img src="img/viber-svgrepo-com.svg" alt="" /></a>
+            <a href="#!"><img src="img/whatsapp-svgrepo-com .svg" alt="" /></a>
+            <a href="#!"><img src="img/telegram-svgrepo-com.svg" alt="" /></a>
           </div>
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <p>Pveurofashion © 2023 - Все права защищены</p>
+      </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="js/main.js"></script>
